--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
   ],
   "addons": [
     {
-      "plan": "heroku-redis:hobby-dev",
+      "plan": "heroku-redis:mini",
       "as": "REDIS"
     }
   ],
