--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot[job-queue,webhooks]>=20.0,<21.0
 celery>=5.3,<6.0
 redis>=5.0,<6.0
 python-dotenv>=1.0,<2.0
+pyrogram>=2.0,<3.0
+tgcrypto>=1.2,<2.0
